# MetaMirror

./: .env.prod.example  .gitignore  CHANGES.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.emergent/: emergent.yml
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
.history/: .env_20251019221025  .env_20251019232739  .env_20251019232812  .env_20251019232825  .env_20251019233100  .env_20251019233104  .env_20251019233106  .env_20251019233116  .env_20251019233120  .env_20251019233123  .env_20251019233125  .env_20251019233128  .env_20251019233133  .env_20251019233136  .env_20251019233152  .env_20251019234415  .env_20251019234417  .env_20251019234433  .env_20251019234436  .env_20251019234438  .env_20251019234519  .env_20251019234526  .env_20251019234529  .env_20251019234531  .env_20251019234536  .env_20251019234540  .env_20251019234543  .env_20251019235113  .env_20251019235412  .env_20251020000151  .env_20251020000154  .env_20251020014513  .env_20251020014519  .env_20251020015847
.history/backend/: .env_20251020000300  .env_20251020000309  .env_20251020000315  .env_20251020000318  .env_20251020000717  .env_20251020000723  .env_20251020001302  .env_20251020001309  .env_20251020001317  .env_20251020001322  .env_20251020001329  .env_20251020014424  (+18 more)
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  TROUBLESHOOTING.md  auto_diagnose.py  check_mongodb.bat  pyproject.toml  quick_start.bat  requirements.txt  run_diagnostics.bat  server.py  start_server.bat  test_api.py
backend/api/: index.py
backend/tests/: conftest.py  test_logic.py  test_models.py
docs/: _config.yml  index.md
frontend/: .dockerignore  .env  Dockerfile  craco.config.js  package-lock.json  package.json
(+29 files in other folders)
